log/build_2024-05-11_21-40-00/office_robot_pkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/dist.py:723: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
  File "/home/sam/tut/MIND6003/install/office_robot_pkg/lib/python3.10/site-packages/office_robot_pkg/settings.py", line 76
    layout.addWidget(self "table")
                          ^^^^^^^
SyntaxError: invalid syntax

